[tool.poetry]
name = "data_quality_label_service"
version = "0.2.2"
description = ""
authors = ["paulboon <paul.boon@dans.knaw.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
